Fixed dispalying html labels for model and form fields.

--- a/lenses/templates/lenses/lens_add_data.html
+++ b/lenses/templates/lenses/lens_add_data.html
@@ -48,7 +48,7 @@
             <td>
               {% if form %}
               {{ form.mychoices.errors }}
-              {{ form.mychoices.label_tag }}
+              {{ form.mychoices.label|safe }}
               {{ form.mychoices }}
               {% endif %}
             </td>
