--- a/lenses/templates/lenses/lens_add_update.html
+++ b/lenses/templates/lenses/lens_add_update.html
@@ -49,7 +49,7 @@
                           <tr>
                             <td>{{ form.ra.errors }}</td>
                             <td>
-			      <div class="sled-help-tooltip">{{ form.ra.label_tag }}</div>
+			      <div class="sled-help-tooltip">{{ form.ra.label }}</div>
 			      <div class="sled-help-tooltip-content">{{ form.ra.help_text|safe }}</div>
 			    </td>
                             <td>{{ form.ra }}</td>
@@ -57,7 +57,7 @@
                           <tr>
                             <td>{{ form.dec.errors }}</td>
 			    <td>
-			      <div class="sled-help-tooltip">{{ form.dec.label_tag }}</div>
+			      <div class="sled-help-tooltip">{{ form.dec.label }}</div>
 			      <div class="sled-help-tooltip-content">{{ form.dec.help_text|safe }}</div>
 			    </td>
                             <td>{{ form.dec }}</td>
@@ -65,7 +65,7 @@
                           <tr>
                             <td>{{ form.image_sep.errors }}</td>
 			    <td>
-			      <div class="sled-help-tooltip">{{ form.image_sep.label_tag }}</div>
+			      <div class="sled-help-tooltip">{{ form.image_sep.label|safe }}</div>
 			      <div class="sled-help-tooltip-content">{{ form.image_sep.help_text|safe }}</div>
 			    </td>
                             <td>{{ form.image_sep }}</td>
@@ -73,7 +73,7 @@
                           <tr>
                             <td>{{ form.z_lens.errors }}</td>
 			    <td>
-			      <div class="sled-help-tooltip">{{ form.z_lens.label_tag }}</div>
+			      <div class="sled-help-tooltip">{{ form.z_lens.label|safe }}</div>
 			      <div class="sled-help-tooltip-content">{{ form.z_lens.help_text|safe }}</div>
 			    </td>
                             <td>{{ form.z_lens }}</td>
@@ -81,7 +81,7 @@
                           <tr>
                             <td>{{ form.z_source.errors }}</td>
 			    <td>
-			      <div class="sled-help-tooltip">{{ form.z_source.label_tag }}</div>
+			      <div class="sled-help-tooltip">{{ form.z_source.label|safe }}</div>
 			      <div class="sled-help-tooltip-content">{{ form.z_source.help_text|safe }}</div>
 			    </td>
                             <td>{{ form.z_source }}</td>
@@ -89,7 +89,7 @@
                           <tr>
                             <td>{{ form.flag_confirmed.errors }}</td>
 			    <td>
-			      <div class="sled-help-tooltip">{{ form.flag_confirmed.label_tag }}</div>
+			      <div class="sled-help-tooltip">{{ form.flag_confirmed.label|safe }}</div>
 			      <div class="sled-help-tooltip-content">{{ form.flag_confirmed.help_text|safe }}</div>
 			    </td>
                             <td>{{ form.flag_confirmed }}</td>
@@ -97,7 +97,7 @@
                           <tr>
                             <td>{{ form.flag_contaminant.errors }}</td>
 			    <td>
-			      <div class="sled-help-tooltip">{{ form.flag_contaminant.label_tag }}</div>
+			      <div class="sled-help-tooltip">{{ form.flag_contaminant.label|safe }}</div>
 			      <div class="sled-help-tooltip-content">{{ form.flag_contaminant.help_text|safe }}</div>
 			    </td>
                             <td>{{ form.flag_contaminant }}</td>
@@ -106,7 +106,7 @@
                           <tr>
                             <td>{{ form.access_level.errors }}</td>
 			    <td>
-			      <div class="sled-help-tooltip">{{ form.access_level.label_tag }}</div>
+			      <div class="sled-help-tooltip">{{ form.access_level.label|safe }}</div>
 			      <div class="sled-help-tooltip-content">{{ form.access_level.help_text|safe }}</div>
 			    </td>
                             <td>{{ form.access_level }}</td>
@@ -124,7 +124,7 @@
                           <tr>
                             <td>{{ form.n_img.errors }}</td>
 			    <td>
-			      <div class="sled-help-tooltip">{{ form.n_img.label_tag }}</div>
+			      <div class="sled-help-tooltip">{{ form.n_img.label|safe }}</div>
 			      <div class="sled-help-tooltip-content">{{ form.n_img.help_text|safe }}</div>
 			    </td>
                             <td>{{ form.n_img }}</td>
@@ -132,7 +132,7 @@
                           <tr>
                             <td>{{ form.lens_type.errors }}</td>
                             <td>
-			      <div class="sled-help-tooltip">{{ form.lens_type.label_tag }}</div>
+			      <div class="sled-help-tooltip">{{ form.lens_type.label|safe }}</div>
 			      <div class="sled-help-tooltip-content">{{ form.lens_type.help_text|safe }}</div>
 			    </td>
                             <td>{{ form.lens_type }}</td>
@@ -140,7 +140,7 @@
                           <tr>
                             <td>{{ form.source_type.errors }}</td>
                             <td>
-			      <div class="sled-help-tooltip">{{ form.source_type.label_tag }}</div>
+			      <div class="sled-help-tooltip">{{ form.source_type.label|safe }}</div>
 			      <div class="sled-help-tooltip-content">{{ form.source_type.help_text|safe }}</div>
 			    </td>
                             <td>{{ form.source_type }}</td>
@@ -148,7 +148,7 @@
                           <tr>
                             <td>{{ form.image_conf.errors }}</td>
                             <td>
-			      <div class="sled-help-tooltip">{{ form.image_conf.label_tag }}</div>
+			      <div class="sled-help-tooltip">{{ form.image_conf.label|safe }}</div>
 			      <div class="sled-help-tooltip-content">{{ form.image_conf.help_text|safe }}</div>
 			    </td>
                             <td>{{ form.image_conf }}</td>
