--- a/lenses/templates/lenses/lens_add_update_modal.html
+++ b/lenses/templates/lenses/lens_add_update_modal.html
@@ -34,7 +34,7 @@ Update Lens {{ lens.name }}
               <tr>
                 <td>{{ form.ra.errors }}</td>
                 <td>
-		  <div class="sled-help-tooltip">{{ form.ra.label_tag }}</div>
+		  <div class="sled-help-tooltip">{{ form.ra.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.ra.help_text|safe }}</div>
 		</td>
                 <td>{{ form.ra }}</td>
@@ -42,7 +42,7 @@ Update Lens {{ lens.name }}
               <tr>
                 <td>{{ form.dec.errors }}</td>
 		<td>
-		  <div class="sled-help-tooltip">{{ form.dec.label_tag }}</div>
+		  <div class="sled-help-tooltip">{{ form.dec.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.dec.help_text|safe }}</div>
 		</td>
                 <td>{{ form.dec }}</td>
@@ -50,7 +50,7 @@ Update Lens {{ lens.name }}
               <tr>
                 <td>{{ form.image_sep.errors }}</td>
 		<td>
-		  <div class="sled-help-tooltip">{{ form.image_sep.label_tag }}</div>
+		  <div class="sled-help-tooltip">{{ form.image_sep.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.image_sep.help_text|safe }}</div>
 		</td>
                 <td>{{ form.image_sep }}</td>
@@ -58,7 +58,7 @@ Update Lens {{ lens.name }}
               <tr>
                 <td>{{ form.z_lens.errors }}</td>
 		<td>
-		  <div class="sled-help-tooltip">{{ form.z_lens.label_tag }}</div>
+		  <div class="sled-help-tooltip">{{ form.z_lens.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.z_lens.help_text|safe }}</div>
 		</td>
                 <td>{{ form.z_lens }}</td>
@@ -66,7 +66,7 @@ Update Lens {{ lens.name }}
               <tr>
                 <td>{{ form.z_source.errors }}</td>
 		<td>
-		  <div class="sled-help-tooltip">{{ form.z_source.label_tag }}</div>
+		  <div class="sled-help-tooltip">{{ form.z_source.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.z_source.help_text|safe }}</div>
 		</td>
                 <td>{{ form.z_source }}</td>
@@ -74,7 +74,7 @@ Update Lens {{ lens.name }}
               <tr>
                 <td>{{ form.flag_confirmed.errors }}</td>
 		<td>
-		  <div class="sled-help-tooltip">{{ form.flag_confirmed.label_tag }}</div>
+		  <div class="sled-help-tooltip">{{ form.flag_confirmed.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.flag_confirmed.help_text|safe }}</div>
 		</td>
                 <td>{{ form.flag_confirmed }}</td>
@@ -82,7 +82,7 @@ Update Lens {{ lens.name }}
               <tr>
                 <td>{{ form.flag_contaminant.errors }}</td>
 		<td>
-		  <div class="sled-help-tooltip">{{ form.flag_contaminant.label_tag }}</div>
+		  <div class="sled-help-tooltip">{{ form.flag_contaminant.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.flag_contaminant.help_text|safe }}</div>
 		</td>
                 <td>{{ form.flag_contaminant }}</td>
@@ -99,7 +99,7 @@ Update Lens {{ lens.name }}
               <tr>
                 <td>{{ form.n_img.errors }}</td>
 		<td>
-		  <div class="sled-help-tooltip">{{ form.n_img.label_tag }}</div>
+		  <div class="sled-help-tooltip">{{ form.n_img.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.n_img.help_text|safe }}</div>
 		</td>
                 <td>{{ form.n_img }}</td>
@@ -107,7 +107,7 @@ Update Lens {{ lens.name }}
               <tr>
                 <td>{{ form.lens_type.errors }}</td>
                 <td>
-		  <div class="sled-help-tooltip">{{ form.lens_type.label_tag }}</div>
+		  <div class="sled-help-tooltip">{{ form.lens_type.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.lens_type.help_text|safe }}</div>
 		</td>
                 <td>{{ form.lens_type }}</td>
@@ -115,7 +115,7 @@ Update Lens {{ lens.name }}
               <tr>
                 <td>{{ form.source_type.errors }}</td>
                 <td>
-		  <div class="sled-help-tooltip">{{ form.source_type.label_tag }}</div>
+		  <div class="sled-help-tooltip">{{ form.source_type.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.source_type.help_text|safe }}</div>
 		</td>
                 <td>{{ form.source_type }}</td>
@@ -123,7 +123,7 @@ Update Lens {{ lens.name }}
               <tr>
                 <td>{{ form.image_conf.errors }}</td>
                 <td>
-		  <div class="sled-help-tooltip">{{ form.image_conf.label_tag }}</div>
+		  <div class="sled-help-tooltip">{{ form.image_conf.label|safe }}</div>
 		  <div class="sled-help-tooltip-content">{{ form.image_conf.help_text|safe }}</div>
 		</td>
                 <td>{{ form.image_conf }}</td>
