--- a/sled_data/templates/sled_data/imaging_update.html
+++ b/sled_data/templates/sled_data/imaging_update.html
@@ -30,7 +30,7 @@ Update Imaging data
 	<tr>
 	  <td>{{ field.error }}</td>
           <td>
-	    <div class="sled-help-tooltip">{{ field.label_tag }}</div>
+	    <div class="sled-help-tooltip">{{ field.label|safe }}</div>
 	    <div class="sled-help-tooltip-content">{{ field.help_text|safe }}</div>
 	  </td>
 	  <td>{{ field }}</td>
