--- a/sled_data/templates/sled_data/catalogue_create.html
+++ b/sled_data/templates/sled_data/catalogue_create.html
@@ -27,7 +27,7 @@ Add Catalogue data?
 	<tr>
 	  <td>{{ field.error }}</td>
           <td>
-	    <div class="sled-help-tooltip">{{ field.label_tag }}</div>
+	    <div class="sled-help-tooltip">{{ field.label|sage }}</div>
 	    <div class="sled-help-tooltip-content">{{ field.help_text|safe }}</div>
 	  </td>
 	  <td>{{ field }}</td>
