--- a/sled_persistent_message/templates/sled_persistent_message/message_create.html
+++ b/sled_persistent_message/templates/sled_persistent_message/message_create.html
@@ -23,22 +23,22 @@ Add new Message?
       <tbody>
 	<tr>
 	  <td>{{ form.from_date.error }}</td>
-	  <td>{{ form.from_date.label_tag }}</td>
+	  <td>{{ form.from_date.label|safe }}</td>
 	  <td>{{ form.from_date }}</td>
 	</tr>
 	<tr>
 	  <td>{{ form.to_date.error }}</td>
-	  <td>{{ form.to_date.label_tag }}</td>
+	  <td>{{ form.to_date.label|safe }}</td>
 	  <td>{{ form.to_date }}</td>
 	</tr>
 	<tr>
 	  <td>{{ form.tag.error }}</td>
-	  <td>{{ form.tag.label_tag }}</td>
+	  <td>{{ form.tag.label|safe }}</td>
 	  <td>{{ form.tag }}</td>
 	</tr>
 	<tr>
 	  <td>{{ form.message.error }}</td>
-	  <td>{{ form.message.label_tag }}</td>
+	  <td>{{ form.message.label|safe }}</td>
 	  <td>{{ form.message }}</td>
 	</tr>
       </tbody>
