--- a/sled_users/templates/sled_users/user_admin.html
+++ b/sled_users/templates/sled_users/user_admin.html
@@ -43,7 +43,7 @@
     
     <h1 class="jb-heading-2">Admin panel</h1>
     
-    <div class="c">
+    <div class="c c-admin">
       <input class="accordion-checkbox" type="checkbox" id="admin-0">
       <h1 class="jb-heading-2">
 	<label for="admin-0">
@@ -65,7 +65,7 @@
     
     
 
-    <div class="c">
+    <div class="c c-admin">
       <input class="accordion-checkbox" type="checkbox" id="instruments">
       <h1 class="jb-heading-2">
 	<label for="instruments">
@@ -118,7 +118,7 @@
       </div>
     </div>
 
-    <div class="c">
+    <div class="c c-admin">
       <input class="accordion-checkbox" type="checkbox" id="bands">
       <h1 class="jb-heading-2">
 	<label for="bands">
@@ -173,7 +173,7 @@
 
 
 
-    <div class="c">
+    <div class="c c-admin">
       <input class="accordion-checkbox" type="checkbox" id="admin-3">
       <h1 class="jb-heading-2">
 	<label for="admin-3">
@@ -209,7 +209,7 @@
     </div>
 
     
-    <div class="c">
+    <div class="c c-admin">
       <input class="accordion-checkbox" type="checkbox" id="admin-4">
       <h1 class="jb-heading-2">
 	<label for="admin-4">
@@ -222,7 +222,7 @@
     </div>
 
 
-    <div class="c">
+    <div class="c c-admin">
       <input class="accordion-checkbox" type="checkbox" id="admin-5">
       <h1 class="jb-heading-2">
 	<label for="admin-5">
