--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -53,7 +53,7 @@
   <div style="margin-top:60px;">
     <h1 class="jb-heading-2">Notifications, Tasks, and Updates</h1>
 
-    <div class="c">
+    <div class="c c-user">
       <input class="accordion-checkbox" type="checkbox" id="faq-0">
       <h1 class="jb-heading-2">
 	<label for="faq-0">
@@ -106,7 +106,7 @@
     </div>
     
 
-    <div class="c">
+    <div class="c c-user">
       <input class="accordion-checkbox" type="checkbox" id="faq-4">
       <h1 class="jb-heading-2">
 	<label for="faq-4">
@@ -127,7 +127,7 @@
     </div>
 
     
-    <div class="c">
+    <div class="c c-user">
       <input class="accordion-checkbox" type="checkbox" id="faq-6">
       <h1 class="jb-heading-2">
 	<label for="faq-6">
@@ -174,7 +174,7 @@
   <div style="margin-top:60px;">
     <h1 class="jb-heading-2">Database Management</h1>
     
-    <div class="c">
+    <div class="c c-user">
       <input class="accordion-checkbox" type="checkbox" id="faq-3">
       <h1 class="jb-heading-2">
 	<label for="faq-3">
@@ -210,7 +210,7 @@
     </div>
 
 
-    <div class="c">
+    <div class="c c-user">
       <input class="accordion-checkbox" type="checkbox" id="faq-5">
       <h1 class="jb-heading-2">
 	<label for="faq-5">
@@ -251,7 +251,7 @@
 
     
     
-    <div class="c">
+    <div class="c c-user">
       <input class="accordion-checkbox" type="checkbox" id="faq-2">
       <h1 class="jb-heading-2">
 	<label for="faq-2">
@@ -288,7 +288,7 @@
 
 
 
-    <div class="c">
+    <div class="c c-user">
       <input class="accordion-checkbox" type="checkbox" id="faq-1">
       <h1 class="jb-heading-2">
 	<label for="faq-1">
@@ -320,7 +320,7 @@
 
 
     
-    <div class="c">
+    <div class="c c-user">
       <input class="accordion-checkbox" type="checkbox" id="lenses">
       <h1 class="jb-heading-2">
 	<label for="lenses">
@@ -378,7 +378,7 @@
 
 
 
-    <div class="c">
+    <div class="c c-user">
       <input class="accordion-checkbox" type="checkbox" id="imagings">
       <h1 class="jb-heading-2">
 	<label for="imagings">
@@ -501,7 +501,7 @@
 
 
 
-    <div class="c">
+    <div class="c c-user">
       <input class="accordion-checkbox" type="checkbox" id="spectra">
       <h1 class="jb-heading-2">
 	<label for="spectra">
@@ -622,7 +622,7 @@
 
 
 
-    <div class="c">
+    <div class="c c-user">
       <input class="accordion-checkbox" type="checkbox" id="catalogues">
       <h1 class="jb-heading-2">
 	<label for="catalogues">
