--- a/sled_users/static/sled_users/css/sled_users.css
+++ b/sled_users/static/sled_users/css/sled_users.css
@@ -29,7 +29,7 @@ div.c h1 {
     background-clip:         padding-box;
 }
 div.c-admin h1 {
-    background-color: #87e6e6;
+    background-color: #b8e6e6;
 }
 div.c-user h1 {
     background-color: #dfdfdf;
