--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -90,7 +90,7 @@
 	  Pending Tasks
 	  {% if N_tasks > 0 %}
 	  <span class="jb-important-text">
-	    - you have <b>{{N_tasks}}</b> new pending {{ N_tasks|pluralize:"task,tasks" }}!
+	  &nbsp; - you have <b>{{N_tasks}}</b> new pending {{ N_tasks|pluralize:"task,tasks" }}!
 	  </span>
 	  {% endif %}
 	</label>
@@ -116,7 +116,7 @@
 	  Notifications
 	  {% if N_note_unread > 0 %}
 	  <span class="jb-important-text">
-	    - you have <b>{{N_note_unread}}</b> unread {{ N_note_unread|pluralize:"notification,notifications" }}!
+	  &nbsp; - you have <b>{{N_note_unread}}</b> unread {{ N_note_unread|pluralize:"notification,notifications" }}!
 	  </span>
 	  {% endif %}
 	</label>
