--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -100,10 +100,34 @@
 	    <td><a href="{% url 'sled_collections:collections-list' %}">Collections</a></td>
 	    <td><a href="{% url 'sled_papers:paper-query' %}">Papers</a></td>
 	    {% if user.is_authenticated %}
-	    <td><a href="{% url 'sled_users:user-profile' %}">{{ user.username }}</a></td>
+	    <td>
+	      <a href="{% url 'sled_users:user-profile' %}">{{ user.username }}</a>
+	      {% with N=user.get_pending_tasks|length %}
+	      {% if N > 0 %}
+	      <span class="badge rounded-pill badge-danger">{{N}} {{N|pluralize:"Task,Tasks"}}</span>	
+	      {% endif %}
+	      {% endwith %}
+	      {% with N=user.notifications.unread|length %}
+	      {% if N > 0 %}
+	      <span class="badge rounded-pill badge-danger">{{N}} {{N|pluralize:"Notification,Notifications"}}</span>
+	      {% endif %}
+	      {% endwith %}
+	    </td>
 	    {% endif %}
 	    {% if user.is_staff %}
-	    <td><a href="{% url 'sled_users:user-admin' %}">Admin</a></td>
+	    <td>
+	      <a href="{% url 'sled_users:user-admin' %}">Admin</a>
+	      {% with N=user.get_admin_pending_tasks|length %}
+	      {% if N > 0 %}
+	      <span class="badge rounded-pill badge-danger">{{N}} {{N|pluralize:"Task,Tasks"}}</span>	
+	      {% endif %}
+	      {% endwith %}
+	      {% with N=user.get_admin_notifications|length %}
+	      {% if N > 0 %}
+	      <span class="badge rounded-pill badge-danger">{{N}} {{N|pluralize:"Notification,Notifications"}}</span>
+	      {% endif %}
+	      {% endwith %}
+	    </td>
 	    {% endif %}	
 	  </tr>
 	</table>
