Remove add catalogue data button

--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -289,12 +289,12 @@
       {% endfor %}
     </div>
 
-    <div>
+    <!--<div>
       <button type="submit" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_data:catalogue-create' lens=lens.id %}">
 	<img src="{% static 'icons/plus.svg' %}">
 	Add Catalogue Entry
       </button>
-    </div>
+    </div>-->
   </div>
 
   <div class="jb-section">
