Fixed avatars. Added sled_core as a place to put common code across the project.

--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -18,7 +18,7 @@
 	  </p>
 	</td>
 	<td valign="bottom" align="right">
-	  <img src="{{ user.avatar }}" loading="lazy" width="100" class="jb-image-2" />
+	  <img src="{{ user.avatar }}" loading="lazy" width="100" class="jb-avatar" />
 	</td>
       </tr>
     </table>
