--- a/sled_users/templates/sled_users/user_visit_card.html
+++ b/sled_users/templates/sled_users/user_visit_card.html
@@ -19,7 +19,7 @@
 	</p>
       </td>
       <td valign="bottom" align="right">
-	<img src="{{ user.avatar }}" loading="lazy" width="100" alt="" class="jb-image-2" />
+	<img src="{{ sled_user.avatar }}" loading="lazy" width="100" alt="" class="jb-avatar" />
       </td>
     </tr>
   </table>
