--- a/sled_users/templates/sled_users/user_visit_card.html
+++ b/sled_users/templates/sled_users/user_visit_card.html
@@ -56,7 +56,7 @@
       </thead>
       <tbody>
         <tr>
-	  <td>{{ user.slack_display_name }}</td>
+	  <td>{{ sled_user.slack_display_name }}</td>
           <td>{{ sled_user.info }}</td>
         </tr>
       </tbody>
