--- a/sled_users/templates/sled_users/user_admin.html
+++ b/sled_users/templates/sled_users/user_admin.html
@@ -66,7 +66,7 @@
 	{% else %}
 	<p class="jb-paragraph-2">No new notifications</p>
 	{% endif %}
-	<a href="{% url 'sled_notifications:notifications-list' %}">See all notifications</a>
+	<a href="{% url 'sled_notifications:notifications-list-admin' %}">See all notifications</a>
 	<br>
 	<br>
       </div>
