Added right units in the catalogue data plot.

--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -381,7 +381,7 @@
   var layout = {
       xaxis: {
 	  range: [-7,7],
-	  title: 'RA<sub>Lens</sub> - RA',
+	  title: '(RA<sub>Lens</sub> - RA) cos(DEC<sub>Lens</sub>)',
 	  zerolinecolor: '#cdcdcd',
 	  linecolor: '#cdcdcd',
 	  mirror: true
